<resources>
    <string name="app_name">Smart Feedback</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button">Button</string>
    <string name="Send">Send</string>
    <string name="Coordinates">Cooordinates:</string>
    <string name="ShareLocation">Share Location</string>
    <string name="EnterAppName">App Name</string>
    <string name="EnterIssue">Enter(or)Tap on Mike to describe the issue</string>
    <string name="Category">Category</string>
    <string name="country_prompt">Choose the app</string>
    <string name="thank_you_for_the_information_please_click_on_the_send_button_below">Thank you for the information.Please click on the Send Button below.</string>
    <string name="something_doesnt_work">Something doesnt work</string>
    <string name="something_is_too_slow">Something is too slow</string>
    <string name="other_issues">Other Issues</string>
    <string name="describe_the_issue">Enter(or)Tap on Mike to tell us more</string>
    <string name="Rbtn_LiketoseeFeature">I like</string>
    <string name="Rbth_dontlikeFeature">I dont like </string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="information">Information..</string>
    <string name="record_screen">Record Screen</string>
    <string name="screenshot">Screenshot</string>
    <string name="i_dont_understand_something">I don\'t understand a feature</string>
    <string name="inconvenient_feature">A feature is inconvenient </string>
    <string name="something_is_confusing">A feature is confusing.</string>
    <string name="on_the_screen">On the Screen</string>
    <string name="it_is_in_the_background">It is in the Background</string>
    <string name="issue_description_picture_and_location_send"><![CDATA[Issue Description->Picture and Location-->Send]]></string>
    <string name="where_do_you_see_the_issue">Where do you see the issue?</string>
    <string name="describe_the_feature_you_would_like_to_see">Tell us something you like in the app</string>
    <string name="describe_the_feature_you_dont_like">Tell us something you dont like in the app</string>
    <string name="txtoverallRating">Overall,how would you rate the app?</string>
    <string name="overall_how_would_you_rate_the_app">Overall,how would you rate the app?</string>
    <string name="i_have_an_idea">I have an Idea!</string>
    <string name="i_like">I Like</string>
    <string name="i_dont_like">I dont like</string>
    <string name="describe_more_about_the_feature">Describe more about the feature..</string>
    <string name="select_app">Select app</string>
    <string-array name="country_arrays">
        <item>--Select App--</item>
        <item>FaceBook</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
    </string-array>
</resources>
