<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MyActivity"
    android:weightSum="1"
    android:baselineAligned="false"
    android:orientation="vertical">


    <ViewAnimator
        android:id="@+id/viewanimator"
        android:layout_width="wrap_content"
        android:layout_height="336dp"
        android:layout_weight="0.63"
        android:accessibilityLiveRegion="none"
        android:backgroundTint="@android:drawable/screen_background_light">


        <LinearLayout
            android:id="@+id/animator1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_weight="0.05"
                android:animationCache="true"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/country_arrays"
                android:fadingEdge="horizontal|vertical"
                android:hapticFeedbackEnabled="true"
                android:padding="10dp"
                android:prompt="@string/country_prompt" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/issue_description_picture_and_location_send"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/fail" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/slow" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/others" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radiogrp1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/Doesnt_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="OnRadioClick_Issue"
                        android:text="@string/something_doesnt_work" />

                    <RadioButton
                        android:id="@+id/Too_slow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="OnRadioClick_Issue"
                        android:text="@string/something_is_too_slow" />

                    <RadioButton
                        android:id="@+id/Other_Issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="OnRadioClick_Issue"
                        android:text="@string/other_issues" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="393dp"
                android:layout_height="123dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/editTextDescription1"
                    android:layout_width="273dp"
                    android:layout_height="102dp"
                    android:layout_weight="0.12"
                    android:ems="10"
                    android:hint="@string/describe_the_issue"
                    android:inputType="textMultiLine" />

                <ImageButton
                    android:id="@+id/imageButton"
                    style="@android:style/Widget.ImageButton"
                    android:layout_width="58dp"
                    android:layout_height="75dp"
                    android:layout_alignBottom="@+id/editTextDescription1"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="11dp"
                    android:layout_weight="0.21"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:backgroundTint="@color/colorAccent"
                    android:cropToPadding="true"
                    android:elevation="1dp"
                    android:onClick="btnSpeech"
                    android:padding="16dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/presence_audio_online"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/animator2"
            android:layout_width="369dp"
            android:layout_height="387dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="354dp"
                android:layout_height="130dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:layout_weight="0.93">

                <FrameLayout
                    android:layout_width="117dp"
                    android:layout_height="86dp"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/background_light"
                        android:elevation="7dp"
                        android:text="@string/screenshot"
                        android:textColor="@color/colorAccent" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/floatingActionButton"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="AddPic"
                        app:backgroundTint="@color/colorAccent"
                        app:fabSize="mini"
                        app:srcCompat="@android:drawable/ic_menu_camera" />
                </FrameLayout>

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="379dp"
                    android:layout_height="108dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="358dp"
                android:layout_height="192dp"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="86dp"
                    android:layout_marginBottom="1dp"
                    android:elevation="7dp">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/floatingActionButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="74dp"
                        android:clickable="true"
                        android:onClick="recordVideo"
                        app:fabSize="mini"
                        app:srcCompat="@android:drawable/presence_video_busy" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/background_light"
                        android:elevation="8dp"
                        android:text="@string/record_screen"
                        android:textColor="@color/colorAccent" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="213dp"
                    android:layout_marginLeft="100dp">

                    <VideoView
                        android:id="@+id/videoView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:focusable="false" />
                </FrameLayout>

            </LinearLayout>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="334dp"
                android:layout_height="46dp"
                android:layout_marginTop="9dp"
                android:checked="false"
                android:onClick="switchOn3"
                android:text="@string/ShareLocation"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/animator3"
            android:layout_width="match_parent"
            android:layout_height="402dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/issue_description_picture_and_location_send"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radiogrp2"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_weight="0.27"
                android:background="@drawable/border">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/where_do_you_see_the_issue"
                    android:textColor="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/IssueOntheScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:onClick="IssueOccursOn"
                    android:text="@string/on_the_screen" />

                <RadioButton
                    android:id="@+id/IssueInBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="IssueOccursOn"
                    android:text="@string/it_is_in_the_background" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.00"
                    android:text="@string/overall_how_would_you_rate_the_app"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/ratingBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:foregroundGravity="center_horizontal"
                    android:isIndicator="false"
                    android:numStars="5" />
            </LinearLayout>
        </LinearLayout>

    </ViewAnimator>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous"
            android:visibility="invisible" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

    <TextView
        android:id="@+id/mywidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/information"
        android:textColor="#ff4500"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/thank_you_for_the_information_please_click_on_the_send_button_below"
        android:textStyle="bold"
        android:visibility="invisible" />

</LinearLayout>