<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:weightSum="1">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:id="@+id/radiogrp3">

        <RadioButton
            android:id="@+id/dontUnderstand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_Rbtnlookandfeel"
            android:text="@string/i_dont_understand_something" />

        <RadioButton
            android:id="@+id/isConfusing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_Rbtnlookandfeel"
            android:text="@string/something_is_confusing" />

        <RadioButton
            android:id="@+id/isInconvenient"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.50"
            android:onClick="click_Rbtnlookandfeel"
            android:text="@string/inconvenient_feature" />
    </RadioGroup>

    <EditText
        android:id="@+id/featureLookandFeel"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Describe more about the feature.."
        android:inputType="textMultiLine" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0.02" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="158dp"
        android:layout_weight="0.69"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_marginBottom="1dp"
            android:elevation="7dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:clickable="true"
                android:onClick="recordVideo"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/presence_video_busy" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@android:color/background_light"
                android:elevation="8dp"
                android:text="@string/record_screen"
                android:textColor="@color/colorAccent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp">

            <VideoView
                android:id="@+id/videoView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:focusable="false" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtoverallRating"
            android:textColor="@color/colorAccent" />

        <RatingBar
            android:id="@+id/ratingBar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:numStars="5" />
    </LinearLayout>

</LinearLayout>