<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tab1_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="tab1myMethod">


        <EditText
            android:id="@+id/editTextAppname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/editTextDescription"
            android:ems="10"
            android:hint="@string/EnterAppName"
            android:inputType="textMultiLine" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextAppname">

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/something_doesnt_work" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/something_is_too_slow" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other_issues" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioGroup"
            android:ems="10"
            android:hint="@string/EnterIssue"
            android:inputType="textMultiLine" />

        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextDescription"
            android:layout_alignParentEnd="true"

            android:layout_below="@+id/radioGroup"
            android:layout_toEndOf="@+id/ratingBar"
            android:adjustViewBounds="true"
            android:background="@null"
            android:cropToPadding="true"
            android:elevation="24dp"
            android:onClick="btnSpeech"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/presence_audio_online"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="149dp"
            android:layout_height="202dp"
            android:layout_below="@+id/editTextDescription"
            android:layout_marginEnd="46dp"

            android:layout_toStartOf="@+id/btnSpeak"
            android:adjustViewBounds="false"
            android:cropToPadding="false" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_below="@+id/imgView"
            android:layout_marginTop="290dp"
            android:clickable="true"
            android:onClick="recordVideo"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/presence_video_busy"
            android:layout_alignStart="@+id/floatingAdd" />

        <Switch
            android:id="@+id/sharelocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:checked="false"
            android:onClick="switchOn"
            android:text="@string/ShareLocation"
            android:textSize="20sp"
            android:layout_marginTop="49dp"
            android:layout_below="@+id/videoView3" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/thank_you_for_the_information_please_click_on_the_send_button_below"
            android:textStyle="bold"
            android:layout_below="@+id/radioGroup3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="72dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="149dp"
            android:layout_below="@+id/radioGroup3"
            android:layout_toEndOf="@+id/floatingActionButton3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Where do you see the issue? "
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/sharelocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="84dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="23dp"
            android:id="@+id/radioGroup3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="On the Screen" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:text="It is in the Background" />
        </RadioGroup>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextDescription"
            android:layout_marginStart="36dp"
            android:layout_marginTop="53dp"
            android:clickable="true"
            android:onClick="AddPic"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <VideoView
            android:id="@+id/videoView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView"
            android:layout_marginTop="119dp"
            android:layout_alignStart="@+id/imgView"
            android:layout_alignBottom="@+id/floatingActionButton3" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/ratingBar" />

    </RelativeLayout>

    </ScrollView>
